<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="vp.com.watchrooms.activities.RoomsActivity$PlaceholderFragment">


    <TextView
        android:id="@+id/room_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_name"
        android:textColor="@color/primary_text_default_material_light"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/room_gender_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/room_name_text_view"
        android:text="@string/room_gender"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/room_status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/room_gender_text_view"
        android:text="@string/room_status"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/room_id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/room_status_text_view"
        android:layout_below="@+id/room_status_text_view"
        android:text="@string/room_id"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible"/>

    <ToggleButton
        android:id="@+id/subscription_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/room_id_text_view"
        android:text="@string/subscription_toggle_text"/>

    <ToggleButton
        android:id="@+id/room_status_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_status_toggle_text"
        android:layout_below="@+id/subscription_toggle_button"
        android:layout_alignParentStart="true"
        android:visibility="visible"/>

</RelativeLayout>
