<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="vp.com.watchrooms.activities.BuildingsActivity$PlaceholderFragment">

    <TextView
        android:text="@string/building_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/building_name_text_view"
        android:textAppearance="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/building_address"
        android:id="@+id/building_address_text_view"
        android:layout_below="@+id/building_name_text_view"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/building_id"
        android:id="@+id/building_id_text_view"
        android:layout_below="@+id/building_address_text_view"
        android:layout_alignStart="@+id/building_address_text_view"
        android:visibility="invisible"/>

</RelativeLayout>
